add deprecation notices to v2 pages

--- a/website/src/pages/docs/index.mdx
+++ b/website/src/pages/docs/index.mdx
@@ -1,4 +1,4 @@
-import { PackageCmd, Tabs, Tab } from '@theguild/components'
+import { PackageCmd, Tabs, Tab, Callout } from '@theguild/components'
 
 # Quick start
 
