--- a/website/src/pages/v2/features/context.mdx
+++ b/website/src/pages/v2/features/context.mdx
@@ -1,3 +1,7 @@
+import { LatestVersionNotice } from '../../../components/latest-version-notice'
+
+<LatestVersionNotice />
+
 # GraphQL Context
 
 A context is usually created for each execution of a GraphQL Operation, and it is passed to the resolver functions as a third argument.
