--- a/website/src/pages/v2/features/error-masking.mdx
+++ b/website/src/pages/v2/features/error-masking.mdx
@@ -1,3 +1,7 @@
+import { LatestVersionNotice } from '../../../components/latest-version-notice'
+
+<LatestVersionNotice />
+
 # Error Masking
 
 Yoga uses [the Envelop `useMaskedErrors`](https://envelop.dev/plugins/use-masked-errors) for automatically masking unexpected errors and preventing sensitive information from leaking to clients.
