--- a/website/src/pages/v2/features/file-uploads.mdx
+++ b/website/src/pages/v2/features/file-uploads.mdx
@@ -1,3 +1,7 @@
+import { LatestVersionNotice } from '../../../components/latest-version-notice'
+
+<LatestVersionNotice />
+
 # File Uploads
 
 GraphQL Yoga supports [GraphQL Multipart Request Specification](https://github.com/jaydenseric/graphql-multipart-request-spec) which allows you to upload files via HTTP and consume the binary data inside GraphQL Resolvers.
