--- a/website/src/pages/v2/features/graphiql.mdx
+++ b/website/src/pages/v2/features/graphiql.mdx
@@ -1,4 +1,7 @@
 import { Callout, PackageCmd } from '@theguild/components'
+import { LatestVersionNotice } from '../../../components/latest-version-notice'
+
+<LatestVersionNotice />
 
 # GraphiQL
 
