--- a/website/src/pages/v2/integrations/integration-with-cloudflare-workers.mdx
+++ b/website/src/pages/v2/integrations/integration-with-cloudflare-workers.mdx
@@ -1,4 +1,7 @@
 import { PackageCmd, Callout } from '@theguild/components'
+import { LatestVersionNotice } from '../../../components/latest-version-notice'
+
+<LatestVersionNotice />
 
 # Integration with Cloudflare Workers
 
