--- a/website/src/pages/v2/integrations/integration-with-deno.mdx
+++ b/website/src/pages/v2/integrations/integration-with-deno.mdx
@@ -1,4 +1,7 @@
 import { Callout } from '@theguild/components'
+import { LatestVersionNotice } from '../../../components/latest-version-notice'
+
+<LatestVersionNotice />
 
 # Integration with Deno
 
