--- a/website/src/pages/v2/migration/migration-from-yoga-v1.mdx
+++ b/website/src/pages/v2/migration/migration-from-yoga-v1.mdx
@@ -1,4 +1,7 @@
 import { PackageCmd, Callout, Tabs, Tab } from '@theguild/components'
+import { LatestVersionNotice } from '../../../components/latest-version-notice'
+
+<LatestVersionNotice />
 
 # Migration from Yoga V1
 
