--- a/website/src/pages/v2/features/cors.mdx
+++ b/website/src/pages/v2/features/cors.mdx
@@ -1,3 +1,7 @@
+import { LatestVersionNotice } from '../../../components/latest-version-notice'
+
+<LatestVersionNotice />
+
 # Configuring CORS with Yoga
 
 CORS stands for Cross-Origin Resource Sharing. In a nutshell, as a security measure, browsers aren't allowed to access resources outside their own domain.
