--- a/website/src/pages/v2/features/envelop-plugins.mdx
+++ b/website/src/pages/v2/features/envelop-plugins.mdx
@@ -1,3 +1,7 @@
+import { LatestVersionNotice } from '../../../components/latest-version-notice'
+
+<LatestVersionNotice />
+
 # Envelop Plugins
 
 [Envelop](https://envelop.dev) is a lightweight JavaScript (TypeScript) library for customizing the GraphQL execution layer, allowing developers to build, share and compose plugins that enhance the capabilities of your GraphQL server.
