--- a/website/src/pages/v2/integrations/z-other-environments.mdx
+++ b/website/src/pages/v2/integrations/z-other-environments.mdx
@@ -1,3 +1,7 @@
+import { LatestVersionNotice } from '../../../components/latest-version-notice'
+
+<LatestVersionNotice />
+
 # Other Environments
 
 If you have a different environment that you want to integrate with, you can implement your middleware/handler like the example below.
