add graphqlwtf video for express

--- a/website/src/pages/docs/integrations/integration-with-express.mdx
+++ b/website/src/pages/docs/integrations/integration-with-express.mdx
@@ -5,6 +5,11 @@ import { PackageCmd } from '@theguild/components'
 [Express is the most popular web framework for Node.js.](https://expressjs.com/) It is a minimalist framework that provides a robust set of features to handle HTTP on Node.js applications.
 You can easily integrate GraphQL Yoga into your Express application with a few lines of code.
 
+<iframe
+  src="https://youtube.com/embed/7OY62cjicq0"
+  title="GraphQL Yoga 3 - Express.js"
+/>
+
 ## Installation
 
 <PackageCmd packages={['express', 'graphql', 'graphql-yoga']} />
